--- a/css/style1.css
+++ b/css/style1.css
@@ -287,3 +287,27 @@ footer{
     color: white;
     padding: 9px 20px;
 }
+@media (max-width: 768px) {
+            .box {
+                width: 80%; 
+            }
+
+            h1 {
+                font-size: 1.5rem; 
+            }
+
+            .btn {
+                width: 100%;
+                margin: 10px 0; 
+            }
+        }
+
+        @media (max-width: 480px) {
+            .box {
+                width: 90%;
+            }
+
+            h1 {
+                font-size: 1.2rem; 
+            }
+        }
