--- a/css/style2.css
+++ b/css/style2.css
@@ -3,6 +3,30 @@
     margin: 0;
     padding: 0;
   }
+@media (max-width: 768px) {
+            .box {
+                width: 80%; 
+            }
+
+            h1 {
+                font-size: 1.5rem; 
+            }
+
+            .btn {
+                width: 100%;
+                margin: 10px 0; 
+            }
+        }
+
+        @media (max-width: 480px) {
+            .box {
+                width: 90%;
+            }
+
+            h1 {
+                font-size: 1.2rem; 
+            }
+        }
   html{
     scroll-behavior: smooth;
   }
