--- a/css/style3.css
+++ b/css/style3.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@media (max-width: 768px) {
+            .box {
+                width: 80%; 
+            }
+
+            h1 {
+                font-size: 1.5rem; 
+            }
+
+            .btn {
+                width: 100%;
+                margin: 10px 0; 
+            }
+        }
+
+        @media (max-width: 480px) {
+            .box {
+                width: 90%;
+            }
+
+            h1 {
+                font-size: 1.2rem; 
+            }
+        }
 *{
   margin: 0;
   padding: 0;
