--- a/css/style4.css
+++ b/css/style4.css
@@ -5,6 +5,30 @@
   box-sizing: border-box;
   font-family: 'bookman', cursive;
 }
+@media (max-width: 768px) {
+            .box {
+                width: 80%; 
+            }
+
+            h1 {
+                font-size: 1.5rem; 
+            }
+
+            .btn {
+                width: 100%;
+                margin: 10px 0; 
+            }
+        }
+
+        @media (max-width: 480px) {
+            .box {
+                width: 90%;
+            }
+
+            h1 {
+                font-size: 1.2rem; 
+            }
+        }
 /* logo */
 #speaker,
 #logo{
